// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`match flow transitions 1`] = `
{
  "currentPlayer": 0,
  "log": [],
  "phase": "reinforce",
  "players": [
    {
      "color": "red",
      "name": "P1",
    },
    {
      "color": "blue",
      "name": "P2",
    },
  ],
  "selectedTerritory": null,
  "territories": [
    {
      "armies": 3,
      "id": "a",
      "neighbors": [
        "b",
      ],
      "owner": 0,
    },
    {
      "armies": 1,
      "id": "b",
      "neighbors": [
        "a",
      ],
      "owner": 1,
    },
  ],
  "tokenPosition": null,
  "turnNumber": 1,
}
`;

exports[`match flow transitions 2`] = `
{
  "currentPlayer": 0,
  "log": [],
  "phase": "attack",
  "players": [
    {
      "color": "red",
      "name": "P1",
    },
    {
      "color": "blue",
      "name": "P2",
    },
  ],
  "selectedTerritory": null,
  "territories": [
    {
      "armies": 4,
      "id": "a",
      "neighbors": [
        "b",
      ],
      "owner": 0,
    },
    {
      "armies": 1,
      "id": "b",
      "neighbors": [
        "a",
      ],
      "owner": 1,
    },
  ],
  "tokenPosition": null,
  "turnNumber": 1,
}
`;

exports[`match flow transitions 3`] = `
{
  "currentPlayer": 0,
  "log": [],
  "phase": "fortify",
  "players": [
    {
      "color": "red",
      "name": "P1",
    },
    {
      "color": "blue",
      "name": "P2",
    },
  ],
  "selectedTerritory": null,
  "territories": [
    {
      "armies": 3,
      "id": "a",
      "neighbors": [
        "b",
      ],
      "owner": 0,
    },
    {
      "armies": 1,
      "id": "b",
      "neighbors": [
        "a",
      ],
      "owner": 0,
    },
  ],
  "tokenPosition": null,
  "turnNumber": 1,
}
`;

exports[`match flow transitions 4`] = `
{
  "currentPlayer": 0,
  "log": [],
  "phase": "gameover",
  "players": [
    {
      "color": "red",
      "name": "P1",
    },
    {
      "color": "blue",
      "name": "P2",
    },
  ],
  "selectedTerritory": null,
  "territories": [
    {
      "armies": 2,
      "id": "a",
      "neighbors": [
        "b",
      ],
      "owner": 0,
    },
    {
      "armies": 2,
      "id": "b",
      "neighbors": [
        "a",
      ],
      "owner": 0,
    },
  ],
  "tokenPosition": null,
  "turnNumber": 1,
}
`;
